fix: remove sidebar bullet points, fix nav spacing and alignment, remove separator line

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2240,7 +2240,7 @@ input, select, textarea {
 
 			#nav ul li a {
 				display: block;
-				padding: 0.5em 1.5em 0.5em 1.5em;
+				padding: 0.5em 0.5em 0.5em 0.5em;
 				color: #4a4a4a;
 				text-decoration: none;
 				outline: 0;
@@ -2565,7 +2565,7 @@ input, select, textarea {
 			}
 
 			#nav ul li a {
-				padding: 0.5em 1.25em 0.5em 1.25em;
+				padding: 0.5em 0.5em 0.5em 0.5em;
 			}
 
 			#headerToggle {
